--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "lodash": "^4.17.21",
+    "marked": "^17.0.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
+    "vue-markdown-editor": "^0.2.0",
     "vue-router": "^4.6.4",
     "vuetify": "^4.0.0-alpha.0"
   },
